--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1140,6 +1140,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: inline-block;
 }
 
+.table {
+  display: table;
+}
+
 .h-10 {
   height: 2.5rem;
 }
@@ -1223,6 +1227,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .leading-relaxed {
