--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1090,6 +1090,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: fixed;
 }
 
+.relative {
+  position: relative;
+}
+
 .inset-x-0 {
   left: 0px;
   right: 0px;
@@ -1109,6 +1113,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .left-0 {
   left: 0px;
+}
+
+.top-\[-0\.15em\] {
+  top: -0.15em;
+}
+
+.top-\[-0\.1em\] {
+  top: -0.1em;
 }
 
 .mx-auto {
@@ -1154,6 +1166,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-\[20rem\] {
   width: 20rem;
+}
+
+.w-\[2em\] {
+  width: 2em;
+}
+
+.w-\[1\.5em\] {
+  width: 1.5em;
+}
+
+.w-\[1\.3em\] {
+  width: 1.3em;
+}
+
+.w-\[1\.25em\] {
+  width: 1.25em;
 }
 
 .max-w-none {
@@ -1229,6 +1257,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 2rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
 .italic {
   font-style: italic;
 }
@@ -1265,6 +1307,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .line-through {
