--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1086,6 +1086,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0;
 }
 
+.prose-invert {
+  --tw-prose-body: var(--tw-prose-invert-body);
+  --tw-prose-headings: var(--tw-prose-invert-headings);
+  --tw-prose-lead: var(--tw-prose-invert-lead);
+  --tw-prose-links: var(--tw-prose-invert-links);
+  --tw-prose-bold: var(--tw-prose-invert-bold);
+  --tw-prose-counters: var(--tw-prose-invert-counters);
+  --tw-prose-bullets: var(--tw-prose-invert-bullets);
+  --tw-prose-hr: var(--tw-prose-invert-hr);
+  --tw-prose-quotes: var(--tw-prose-invert-quotes);
+  --tw-prose-quote-borders: var(--tw-prose-invert-quote-borders);
+  --tw-prose-captions: var(--tw-prose-invert-captions);
+  --tw-prose-code: var(--tw-prose-invert-code);
+  --tw-prose-pre-code: var(--tw-prose-invert-pre-code);
+  --tw-prose-pre-bg: var(--tw-prose-invert-pre-bg);
+  --tw-prose-th-borders: var(--tw-prose-invert-th-borders);
+  --tw-prose-td-borders: var(--tw-prose-invert-td-borders);
+}
+
 .fixed {
   position: fixed;
 }
@@ -1097,6 +1116,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .inset-x-0 {
   left: 0px;
   right: 0px;
+}
+
+.top-\[-0\.1em\] {
+  top: -0.1em;
 }
 
 .top-0 {
@@ -1115,12 +1138,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 0px;
 }
 
-.top-\[-0\.15em\] {
-  top: -0.15em;
-}
-
-.top-\[-0\.1em\] {
-  top: -0.1em;
+.top-\[58px\] {
+  top: 58px;
 }
 
 .mx-auto {
@@ -1128,20 +1147,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
-.mt-12 {
-  margin-top: 3rem;
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .ml-\[20rem\] {
   margin-left: 20rem;
-}
-
-.ml-4 {
-  margin-left: 1rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
 }
 
 .block {
@@ -1160,28 +1171,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 2.5rem;
 }
 
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[2em\] {
-  width: 2em;
-}
-
-.w-\[1\.5em\] {
-  width: 1.5em;
-}
-
-.w-\[1\.3em\] {
-  width: 1.3em;
+.h-\[58px\] {
+  height: 58px;
 }
 
 .w-\[1\.25em\] {
   width: 1.25em;
+}
+
+.w-\[20rem\] {
+  width: 20rem;
 }
 
 .max-w-none {
@@ -1204,6 +1203,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: nowrap;
 }
 
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
+}
+
+.border-\#454443 {
+  --tw-border-opacity: 1;
+  border-color: rgb(69 68 67 / var(--tw-border-opacity));
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1219,6 +1231,21 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-\#353433 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 52 51 / var(--tw-bg-opacity));
+}
+
+.bg-\#090807 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(9 8 7 / var(--tw-bg-opacity));
+}
+
+.bg-\#252423 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(37 36 35 / var(--tw-bg-opacity));
+}
+
 .p-6 {
   padding: 1.5rem;
 }
@@ -1227,20 +1254,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2.5rem;
 }
 
-.pl-\[calc\(0\.75rem\*var\(--depth\)\)\] {
-  padding-left: calc(0.75rem * var(--depth));
-}
-
 .pl-\[calc\(0\.5rem\+0\.75rem\*var\(--depth\)\)\] {
   padding-left: calc(0.5rem + 0.75rem * var(--depth));
 }
 
-.pr-1 {
-  padding-right: 0.25rem;
-}
-
 .pr-2 {
   padding-right: 0.5rem;
+}
+
+.pt-\[58px\] {
+  padding-top: 58px;
 }
 
 .align-middle {
@@ -1250,16 +1273,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .text-lg {
@@ -1277,6 +1290,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-600 {
@@ -1299,19 +1317,44 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(147 51 234 / var(--tw-text-opacity));
 }
 
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
+.text-\#e9e8e7 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(233 232 231 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-orange-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-sky-400 {
+  --tw-text-opacity: 1;
+  color: rgb(56 189 248 / var(--tw-text-opacity));
+}
+
+.text-purple-400 {
+  --tw-text-opacity: 1;
+  color: rgb(192 132 252 / var(--tw-text-opacity));
+}
+
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-\#8b8685 {
+  --tw-text-opacity: 1;
+  color: rgb(139 134 133 / var(--tw-text-opacity));
 }
 
 .line-through {
