--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1142,6 +1142,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: 58px;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
+.z-10 {
+  z-index: 10;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
