--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1405,12 +1405,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 58px;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .w-\[1\.25em\] {
   width: 1.25em;
 }
 
 .w-\[20rem\] {
   width: 20rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-4 {
+  width: 1rem;
 }
 
 .max-w-none {
@@ -1423,6 +1435,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-none {
   flex: none;
+}
+
+.rotate-90 {
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .items-center {
@@ -1524,6 +1541,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 58px;
 }
 
+.pl-\[calc\(0\.25rem\+0\.75rem\*var\(--depth\)\)\] {
+  padding-left: calc(0.25rem + 0.75rem * var(--depth));
+}
+
 .align-middle {
   vertical-align: middle;
 }
@@ -1552,6 +1573,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .leading-relaxed {
   line-height: 1.625;
+}
+
+.leading-\[16px\] {
+  line-height: 16px;
 }
 
 .text-gray-500 {
