--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1531,6 +1531,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 18px;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .align-middle {
   vertical-align: middle;
 }
