--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1365,14 +1365,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
-.ml-\[20rem\] {
-  margin-left: 20rem;
-}
-
-.ml-8 {
-  margin-left: 2rem;
-}
-
 .ml-auto {
   margin-left: auto;
 }
@@ -1462,10 +1454,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center {
   align-items: center;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-3 {
@@ -1558,6 +1546,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 3rem;
 }
 
+.pl-\[18px\] {
+  padding-left: 18px;
+}
+
 .pt-\[58px\] {
   padding-top: 58px;
 }
@@ -1570,10 +1562,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.5rem;
 }
 
-.pl-\[18px\] {
-  padding-left: 18px;
-}
-
 .text-right {
   text-align: right;
 }
@@ -1582,9 +1570,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   vertical-align: middle;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .text-lg {
@@ -1592,14 +1580,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-sm {
@@ -1617,10 +1600,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .italic {
   font-style: italic;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
 }
 
 .leading-loose {
@@ -1748,6 +1727,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .prose-th\:text-\#8b8685 :is(:where(th):not(:where([class~="not-prose"] *))) {
   --tw-text-opacity: 1;
   color: rgb(139 134 133 / var(--tw-text-opacity));
+}
+
+@media (pointer: coarse) {
+  .coarse\:leading-loose {
+    line-height: 2;
+  }
+
+  .coarse\:\!leading-loose {
+    line-height: 2 !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -2013,11 +2002,5 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:leading-relaxed {
     line-height: 1.625;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:ml-\[20rem\] {
-    margin-left: 20rem;
   }
 }
